--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,9 +15,9 @@ jobs:
         uses: actions/checkout@v2
 
       - name: setup-zig
-        uses: goto-bus-stop/setup-zig@v1
+        uses: goto-bus-stop/setup-zig@v2
         with:
-          version: master
+          version: 0.11.0
 
       - name: lint
         run: |
@@ -38,9 +38,9 @@ jobs:
           submodules: recursive
 
       - name: setup-zig
-        uses: goto-bus-stop/setup-zig@v1
+        uses: goto-bus-stop/setup-zig@v2
         with:
-          version: master
+          version: 0.11.0
 
       - name: build
         run: zig build
@@ -66,9 +66,9 @@ jobs:
           submodules: recursive
 
       - name: setup-zig
-        uses: goto-bus-stop/setup-zig@v1
+        uses: goto-bus-stop/setup-zig@v2
         with:
-          version: master
+          version: 0.11.0
 
       - name: build
         run: |
